# telegram-logger

./: .gitignore  README.rst  pyproject.toml
telegram_logger/: formatters.py  handlers.py
